--- a/fr/index.html
+++ b/fr/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>doReNew (France)</title>
   <meta name="description" content="Notre objectif est d'améliorer la Tech en développant des logiciels et en affirmant notre expertise, afin qu'un jour vous puissiez tenir un appareil DRN en main.">
-  <meta name="keywords" content="Technologie, Dorenew Tech, dorenew, drn, doronew, futur, next, dev, developing, colors, design, motion design, advenced, techno, ReNew, ronewn renew, re new, fr, france, françe, french, europe, france globale,  dorenewtech, dorenewtech, dorenewte, dorenewtec, dorenwtech">
+  <meta name="keywords" content="Technologie, Dorenew Tech, dorenew, drn, doronew, futur, next, dev, developing, colors, design, motion design, advenced, techno, ReNew, ronewn renew, re new, fr, france, françe, french, europe, france globale,  dorenewtech, dorenewtech, dorenewte, dorenewtec, dorenwtech, dorenewfr, dorenewfrance, dorenewfrench, doreneweu, dorenew eu, renew fr, renew eu, dore, dorefr, dorene, do re new, re new, re-new, do-re-new">
   <meta name="author" content="doReNew (France)">
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
@@ -215,7 +215,7 @@
           <span class="relative ml-4 mb-3 inline-block text-sm text-white md:ml-5 md:text-lg">work in progess...</span>
         </a>
         <!-- image - end -->
-  
+
         <!-- image - start -->
         <a href="#" class="group relative flex h-48 items-end overflow-hidden rounded-[23px]  shadow-lg md:h-80">
           <img src="https://raw.githubusercontent.com/doReNew/doReNew-WEB-RESSOURCES/main/img/webp/Banner-main.webp" loading="lazy" alt="Photo by Dall.E" class="absolute inset-0 h-full w-full object-cover object-center transition duration-500 group-hover:scale-110" />
