--- a/index.html
+++ b/index.html
@@ -147,10 +147,6 @@
       <div class="mx-auto max-w-screen-xl px-4 md:px-8">
         <div class="flex items-center gap-12">
           <h2 class="text-2xl font-bold text-gray-800 lg:text-3xl">More doReNew
-            <span
-            class="inline-block whitespace-nowrap rounded bg-[#ff4c04] px-1 py-1 text-top align-top text-xs font-bold leading-none text-white"
-            >BETA</span
-          >
           </h2>
   
           <p class="hidden max-w-screen-sm text-gray-500 md:block"></p>
@@ -163,7 +159,7 @@
           <!-- product - start -->
           <div>
             <a href="#" class="group relative flex h-96 items-end overflow-hidden rounded-[24px]  p-4 shadow-lg transition ease-in-out hover:scale-110 duration-300">
-              <img src="https://raw.githubusercontent.com/doReNew/doReNew-WEB-RESSOURCES/main/img/webp/Collections.webp" loading="lazy" alt="img error" class="absolute inset-0 h-full w-full object-cover object-center transition ease-in-out group-hover:scale-110 duration-500" />
+              <img src="https://github.com/doReNew/doReNew-WEB-RESSOURCES/raw/refs/heads/main/img/webp/Cards-Visuals.webp" loading="lazy" alt="img error" class="absolute inset-0 h-full w-full object-cover object-center transition ease-in-out group-hover:scale-110 duration-500" />
 
               <div class="relative flex w-full flex-col rounded-[23px]  p-4 backdrop-blur-xl backdrop-brightness-50 text-center">
                 <span class="text-white">doReNew</span>
@@ -176,7 +172,7 @@
           <!-- product - start -->
           <div>
             <a href="#" class="group relative flex h-96 items-end overflow-hidden rounded-[24px]  p-4 shadow-lg transition ease-in-out hover:scale-110 duration-300 ">
-              <img src="https://raw.githubusercontent.com/doReNew/doReNew-WEB-RESSOURCES/main/img/webp/Collections.webp" loading="lazy" alt="img error" class="absolute inset-0 h-full w-full object-cover object-center transition ease-in-out group-hover:scale-110 duration-500" />
+              <img src="https://github.com/doReNew/doReNew-WEB-RESSOURCES/raw/refs/heads/main/img/webp/Cards-Games-Studio.webp" loading="lazy" alt="img error" class="absolute inset-0 h-full w-full object-cover object-center transition ease-in-out group-hover:scale-110 duration-500" />
     
               <div class="relative flex w-full flex-col rounded-[23px]  p-4 backdrop-blur-xl backdrop-brightness-50 text-center">
                 <span class="text-white">doReNew</span>
@@ -189,7 +185,7 @@
           <!-- product - start -->
           <div>
             <a href="#" class="group relative flex h-96 items-end overflow-hidden rounded-[24px]  p-4 shadow-lg transition ease-in-out hover:scale-110 duration-300">
-              <img src="https://raw.githubusercontent.com/doReNew/doReNew-WEB-RESSOURCES/main/img/webp/Collections.webp" loading="lazy" alt="img error" class="absolute inset-0 h-full w-full object-cover object-center transition ease-in-out group-hover:scale-110 duration-500" />
+              <img src="https://github.com/doReNew/doReNew-WEB-RESSOURCES/raw/refs/heads/main/img/webp/Cards-Networks.webp" loading="lazy" alt="img error" class="absolute inset-0 h-full w-full object-cover object-center transition ease-in-out group-hover:scale-110 duration-500" />
 
               <div class="relative flex w-full flex-col rounded-[23px]  p-4 backdrop-blur-xl backdrop-brightness-50 text-center">
                 <span class="text-white">doReNew</span>
@@ -202,7 +198,7 @@
           <!-- product - start -->
           <div>
             <a href="#" class="group relative flex h-96 items-end overflow-hidden rounded-[24px]  p-4 shadow-lg transition ease-in-out hover:scale-110 duration-300">
-              <img src="https://raw.githubusercontent.com/doReNew/doReNew-WEB-RESSOURCES/main/img/webp/Collections.webp" loading="lazy" alt="img error" class="absolute inset-0 h-full w-full object-cover object-center transition ease-in-out group-hover:scale-110 duration-500" />
+              <img src="https://github.com/doReNew/doReNew-WEB-RESSOURCES/raw/refs/heads/main/img/webp/Cards-Computers.webp" loading="lazy" alt="img error" class="absolute inset-0 h-full w-full object-cover object-center transition ease-in-out group-hover:scale-110 duration-500" />
 
               <div class="relative flex w-full flex-col rounded-[23px]  p-4 backdrop-blur-xl backdrop-brightness-50 text-center">
                 <span class="text-white">doReNew</span>
