--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta name="description" content="Our goal is to improve Tech by developing software and establishing our expertise, so that one day you can hold a DRN device in your hands.">
   <meta name="keywords" content="Technologie, Dorenew Tech, dorenew, drn, doronew, futur, next, dev, developing, colors, design, motion design, advenced, techno, ReNew, ronewn renew, re new, us, europe, english, anglish, global, rn, dorenewtech, dorenewtech, dorenewte, dorenewtec, dorenwtech">
   <meta name="author" content="doReNew">
+  <meta name="logo" content="https://github.com/doReNew/doReNew-WEB-RESSOURCES/raw/refs/heads/main/img/webp/logo-orange-cube.webp">
   <script src="https://cdn.tailwindcss.com"></script>
   
 
