--- a/fr/index.html
+++ b/fr/index.html
@@ -8,6 +8,7 @@
   <meta name="description" content="Notre objectif est d'améliorer la Tech en développant des logiciels et en affirmant notre expertise, afin qu'un jour vous puissiez tenir un appareil DRN en main.">
   <meta name="keywords" content="Technologie, Dorenew Tech, dorenew, drn, doronew, futur, next, dev, developing, colors, design, motion design, advenced, techno, ReNew, ronewn renew, re new, fr, france, françe, french, europe, france globale,  dorenewtech, dorenewtech, dorenewte, dorenewtec, dorenwtech, dorenewfr, dorenewfrance, dorenewfrench, doreneweu, dorenew eu, renew fr, renew eu, dore, dorefr, dorene, do re new, re new, re-new, do-re-new">
   <meta name="author" content="doReNew (France)">
+  <meta name="logo" content="https://github.com/doReNew/doReNew-WEB-RESSOURCES/raw/refs/heads/main/img/webp/logo-orange-cube.webp">
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     @font-face {
