fixed links footer

--- a/index.html
+++ b/index.html
@@ -364,6 +364,10 @@
               <div>
                 <a href="#" class="text-gray-400 transition duration-100 hover:text-white active:text-indigo-600">Jobs</a>
               </div>
+
+              <div>
+                <a href="branding" class="text-gray-400 transition duration-100 hover:text-white active:text-indigo-600">Branding</a>
+              </div>
             </nav>
           </div>
           <!-- nav - end -->
@@ -381,9 +385,6 @@
                 <a href="#" class="text-gray-400 transition duration-100 hover:text-white active:text-indigo-600">Documentation</a>
               </div>
 
-              <div>
-                <a href="#" class="text-gray-400 transition duration-100 hover:text-white active:text-indigo-600">FAQ</a>
-              </div>
             </nav>
           </div>
           <!-- nav - end -->
