updated branding ( indev )

--- a/branding.html
+++ b/branding.html
@@ -62,9 +62,71 @@
   </div>
   </section>
   <!-- component -->
-  Page under development, please check back later
-  <footer class="absolute bottom-0 w-full text-center pb-4">
-    <p class="text-[#ff4c04]">@2024 doReNew.</p>
-  </footer>
+<section>
+  <div class="bg-white py-6 sm:py-8 lg:py-12">
+    <div class="mx-auto max-w-screen-2xl px-4 md:px-8">
+      <div class="mb-6 flex items-end justify-between gap-4">
+        <h2 class="text-2xl font-bold text-gray-800 lg:text-3xl">Main logo of <a class="text-[#ff4c04]">doReNew</a>
+        </h2>
+  
+        <a href="#" class="inline-block rounded-lg border bg-white px-4 py-2 text-center text-sm font-semibold text-gray-500 outline-none ring-indigo-300 transition duration-100 hover:bg-gray-100 focus-visible:ring active:bg-gray-200 md:px-8 md:py-3 md:text-base">Show more</a>
+      </div>
+  
+      <div class="grid gap-x-4 gap-y-6 sm:grid-cols-2 md:gap-x-6 lg:grid-cols-3 xl:grid-cols-4">
+        <!-- product - start -->
+        <div>
+          <a href="#" class="group mb-2 block h-96 overflow-hidden rounded-lg bg-gray-100 shadow-lg lg:mb-3">
+            <img src="https://github.com/doReNew/doReNew-WEB-RESSOURCES/raw/refs/heads/main/img/webp/logo-orange-cube.webp" loading="lazy" alt="Photo by Austin Wade" class="h-full w-full object-cover object-center transition duration-200 group-hover:scale-110" />
+          </a>
+  
+          <div class="flex flex-col">
+            <span class="text-gray-500">Main logo</span>
+            <a href="#" class="text-lg font-bold text-gray-800 transition duration-100 hover:text-gray-500 lg:text-xl">Orange</a>
+          </div>
+        </div>
+        <!-- product - end -->
+  
+        <!-- product - start -->
+        <div>
+          <a href="#" class="group mb-2 block h-96 overflow-hidden rounded-lg bg-gray-100 shadow-lg lg:mb-3">
+            <img src="https://github.com/doReNew/doReNew-WEB-RESSOURCES/raw/refs/heads/main/img/webp/logo-orange-cube.webp" loading="lazy" alt="Photo by engin akyurt" class="h-full w-full object-cover object-center transition duration-200 group-hover:scale-110" />
+          </a>
+  
+          <div class="flex flex-col">
+            <span class="text-gray-500">indev</span>
+            <a href="#" class="text-lg font-bold text-gray-800 transition duration-100 hover:text-gray-500 lg:text-xl">indev</a>
+          </div>
+        </div>
+        <!-- product - end -->
+  
+        <!-- product - start -->
+        <div>
+          <a href="#" class="group mb-2 block h-96 overflow-hidden rounded-lg bg-gray-100 shadow-lg lg:mb-3">
+            <img src="https://github.com/doReNew/doReNew-WEB-RESSOURCES/raw/refs/heads/main/img/webp/logo-orange-cube.webp" loading="lazy" alt="Photo by Austin Wade" class="h-full w-full object-cover object-center transition duration-200 group-hover:scale-110" />
+          </a>
+  
+          <div class="flex flex-col">
+            <span class="text-gray-500">indev</span>
+            <a href="#" class="text-lg font-bold text-gray-800 transition duration-100 hover:text-gray-500 lg:text-xl">indev</a>
+          </div>
+        </div>
+        <!-- product - end -->
+  
+        <!-- product - start -->
+        <div>
+          <a href="#" class="group mb-2 block h-96 overflow-hidden rounded-lg bg-gray-100 shadow-lg lg:mb-3">
+            <img src="https://github.com/doReNew/doReNew-WEB-RESSOURCES/raw/refs/heads/main/img/webp/logo-orange-cube.webp" loading="lazy" alt="Photo by Austin Wade" class="h-full w-full object-cover object-center transition duration-200 group-hover:scale-110" />
+          </a>
+  
+          <div class="flex flex-col">
+            <span class="text-gray-500">indev</span>
+            <a href="#" class="text-lg font-bold text-gray-800 transition duration-100 hover:text-gray-500 lg:text-xl">indev</a>
+          </div>
+        </div>
+        <!-- product - end -->
+      </div>
+    </div>
+  </div>
+</section>
 
 </body>
