--- a/branding.html
+++ b/branding.html
@@ -78,7 +78,7 @@
       <div class="grid gap-x-4 gap-y-6 sm:grid-cols-2 md:gap-x-6 lg:grid-cols-3 xl:grid-cols-4">
         <!-- product - start -->
         <div>
-          <a href="#" class="group mb-2 block h-96 overflow-hidden rounded-lg bg-gray-100 shadow-lg lg:mb-3">
+          <a href="#" class="group mb-2 block h-96 overflow-hidden rounded-[24px] bg-gray-100 shadow-lg lg:mb-3">
             <img src="https://github.com/doReNew/doReNew-WEB-RESSOURCES/raw/refs/heads/main/img/webp/logo-orange-cube.webp" loading="lazy" alt="Photo by Austin Wade" class="h-full w-full object-cover object-center transition duration-200 group-hover:scale-110" />
           </a>
   
@@ -91,39 +91,39 @@
   
         <!-- product - start -->
         <div>
-          <a href="#" class="group mb-2 block h-96 overflow-hidden rounded-lg bg-gray-100 shadow-lg lg:mb-3">
-            <img src="https://github.com/doReNew/doReNew-WEB-RESSOURCES/raw/refs/heads/main/img/webp/logo-orange-cube.webp" loading="lazy" alt="Photo by engin akyurt" class="h-full w-full object-cover object-center transition duration-200 group-hover:scale-110" />
+          <a href="#" class="group mb-2 block h-96 overflow-hidden rounded-[24px] bg-gray-100 shadow-lg lg:mb-3">
+            <img src="https://raw.githubusercontent.com/doReNew/doReNew-WEB-RESSOURCES/refs/heads/main/img/webp/logo-main/Red%20doReNew%20full.webp" loading="lazy" alt="Photo by engin akyurt" class="h-full w-full object-cover object-center transition duration-200 group-hover:scale-110" />
           </a>
   
           <div class="flex flex-col">
-            <span class="text-gray-500">indev</span>
-            <a href="#" class="text-lg font-bold text-gray-800 transition duration-100 hover:text-gray-500 lg:text-xl">indev</a>
+            <span class="text-gray-500">for low-end screen</span>
+            <a href="#" class="text-lg font-bold text-gray-800 transition duration-100 hover:text-gray-500 lg:text-xl">Blood</a>
           </div>
         </div>
         <!-- product - end -->
   
         <!-- product - start -->
         <div>
-          <a href="#" class="group mb-2 block h-96 overflow-hidden rounded-lg bg-gray-100 shadow-lg lg:mb-3">
-            <img src="https://github.com/doReNew/doReNew-WEB-RESSOURCES/raw/refs/heads/main/img/webp/logo-orange-cube.webp" loading="lazy" alt="Photo by Austin Wade" class="h-full w-full object-cover object-center transition duration-200 group-hover:scale-110" />
+          <a href="#" class="group mb-2 block h-96 overflow-hidden rounded-[24px] bg-gray-100 shadow-lg lg:mb-3">
+            <img src="https://raw.githubusercontent.com/doReNew/doReNew-WEB-RESSOURCES/refs/heads/main/img/webp/logo-main/Monochrome%20white%20doReNew%20full.webp" loading="lazy" alt="Photo by Austin Wade" class="h-full w-full object-cover object-center transition duration-200 group-hover:scale-110" />
           </a>
   
           <div class="flex flex-col">
             <span class="text-gray-500">indev</span>
-            <a href="#" class="text-lg font-bold text-gray-800 transition duration-100 hover:text-gray-500 lg:text-xl">indev</a>
+            <a href="#" class="text-lg font-bold text-gray-800 transition duration-100 hover:text-gray-500 lg:text-xl">Light-on</a>
           </div>
         </div>
         <!-- product - end -->
   
         <!-- product - start -->
         <div>
-          <a href="#" class="group mb-2 block h-96 overflow-hidden rounded-lg bg-gray-100 shadow-lg lg:mb-3">
-            <img src="https://github.com/doReNew/doReNew-WEB-RESSOURCES/raw/refs/heads/main/img/webp/logo-orange-cube.webp" loading="lazy" alt="Photo by Austin Wade" class="h-full w-full object-cover object-center transition duration-200 group-hover:scale-110" />
+          <a href="#" class="group mb-2 block h-96 overflow-hidden rounded-[24px] bg-gray-100 shadow-lg lg:mb-3">
+            <img src="https://raw.githubusercontent.com/doReNew/doReNew-WEB-RESSOURCES/refs/heads/main/img/webp/logo-main/Monochrome%20black%20doReNew.webp" loading="lazy" alt="Photo by Austin Wade" class="h-full w-full object-cover object-center transition duration-200 group-hover:scale-110" />
           </a>
   
           <div class="flex flex-col">
             <span class="text-gray-500">indev</span>
-            <a href="#" class="text-lg font-bold text-gray-800 transition duration-100 hover:text-gray-500 lg:text-xl">indev</a>
+            <a href="#" class="text-lg font-bold text-gray-800 transition duration-100 hover:text-gray-500 lg:text-xl">Light-off</a>
           </div>
         </div>
         <!-- product - end -->
