--- a/branding.html
+++ b/branding.html
@@ -79,7 +79,7 @@
         <!-- product - start -->
         <div>
           <a href="#" class="group mb-2 block h-96 overflow-hidden rounded-[24px] bg-gray-100 shadow-lg lg:mb-3">
-            <img src="https://github.com/doReNew/doReNew-WEB-RESSOURCES/raw/refs/heads/main/img/webp/logo-orange-cube.webp" loading="lazy" alt="Photo by Austin Wade" class="h-full w-full object-cover object-center transition duration-200 group-hover:scale-110" />
+            <img src="https://github.com/doReNew/doReNew-WEB-RESSOURCES/raw/refs/heads/main/img/webp/logo-orange-cube.webp" loading="lazy" alt="doReNew  orange" class="h-full w-full object-cover object-center transition duration-200 group-hover:scale-110" />
           </a>
   
           <div class="flex flex-col">
@@ -92,7 +92,7 @@
         <!-- product - start -->
         <div>
           <a href="#" class="group mb-2 block h-96 overflow-hidden rounded-[24px] bg-gray-100 shadow-lg lg:mb-3">
-            <img src="https://raw.githubusercontent.com/doReNew/doReNew-WEB-RESSOURCES/refs/heads/main/img/webp/logo-main/Red%20doReNew%20full.webp" loading="lazy" alt="Photo by engin akyurt" class="h-full w-full object-cover object-center transition duration-200 group-hover:scale-110" />
+            <img src="https://raw.githubusercontent.com/doReNew/doReNew-WEB-RESSOURCES/refs/heads/main/img/webp/logo-main/Red%20doReNew%20full.webp" loading="lazy" alt="doReNew red" class="h-full w-full object-cover object-center transition duration-200 group-hover:scale-110" />
           </a>
   
           <div class="flex flex-col">
@@ -105,7 +105,7 @@
         <!-- product - start -->
         <div>
           <a href="#" class="group mb-2 block h-96 overflow-hidden rounded-[24px] bg-gray-100 shadow-lg lg:mb-3">
-            <img src="https://raw.githubusercontent.com/doReNew/doReNew-WEB-RESSOURCES/refs/heads/main/img/webp/logo-main/Monochrome%20white%20doReNew%20full.webp" loading="lazy" alt="Photo by Austin Wade" class="h-full w-full object-cover object-center transition duration-200 group-hover:scale-110" />
+            <img src="https://raw.githubusercontent.com/doReNew/doReNew-WEB-RESSOURCES/refs/heads/main/img/webp/logo-main/Monochrome%20white%20doReNew%20full.webp" loading="lazy" alt="doReNew white" class="h-full w-full object-cover object-center transition duration-200 group-hover:scale-110" />
           </a>
   
           <div class="flex flex-col">
@@ -118,7 +118,7 @@
         <!-- product - start -->
         <div>
           <a href="#" class="group mb-2 block h-96 overflow-hidden rounded-[24px] bg-gray-100 shadow-lg lg:mb-3">
-            <img src="https://raw.githubusercontent.com/doReNew/doReNew-WEB-RESSOURCES/refs/heads/main/img/webp/logo-main/Monochrome%20black%20doReNew.webp" loading="lazy" alt="Photo by Austin Wade" class="h-full w-full object-cover object-center transition duration-200 group-hover:scale-110" />
+            <img src="https://raw.githubusercontent.com/doReNew/doReNew-WEB-RESSOURCES/refs/heads/main/img/webp/logo-main/Monochrome%20black%20doReNew.webp" loading="lazy" alt="doReNew black" class="h-full w-full object-cover object-center transition duration-200 group-hover:scale-110" />
           </a>
   
           <div class="flex flex-col">
