--- a/fr/branding.html
+++ b/fr/branding.html
@@ -45,7 +45,7 @@
 
   </style>
 </head>
-<body class="absolute top-0 -z-10 h-full w-full bg-white"><div class="absolute bottom-auto left-auto right-0 top-0 h-[500px] w-[500px] -translate-x-[30%] translate-y-[20%] rounded-full bg-[#ff4c04] opacity-20 blur-[120px]"></div></div>
+<body class="absolute inset-0 -z-10 h-full w-full bg-white bg-[radial-gradient(#e5e7eb_1px,transparent_1px)] [background-size:16px_16px] slide-in-blurred-bottom"></div>
   <section>
     <div
     class="max-w-lg px-4 sm:pt-24 pt-12 sm:pb-8 mx-auto text-left md:max-w-none md:text-center"
