--- a/fr/branding.html
+++ b/fr/branding.html
@@ -63,6 +63,13 @@
   </div>
   </section>
   <!-- component -->
+     <!-- banner - start -->
+     <div class="mx-auto max-w-screen-2xl px-4 pb-4 md:px-8">
+      <div class="relative flex flex-wrap rounded-lg bg-black px-4 py-3 shadow-lg sm:flex-nowrap sm:items-center sm:justify-center sm:gap-3 sm:pr-8 md:px-8">
+        <div class="order-1 mb-4 inline-block w-11/12 max-w-screen-sm text-sm text-white sm:order-none sm:my-2 sm:w-auto md:text-base">La page est en développement.</div>
+      </div>
+    </div>
+    <!-- banner - end -->
 <section>
   <div class="bg-white py-6 sm:py-8 lg:py-12">
     <div class="mx-auto max-w-screen-2xl px-4 md:px-8">
