--- a/branding.html
+++ b/branding.html
@@ -44,7 +44,7 @@
 
   </style>
 </head>
-<body class="absolute inset-0 -z-10 h-full w-full bg-white bg-[radial-gradient(#e5e7eb_1px,transparent_1px)] [background-size:16px_16px] slide-in-blurred-bottom"></div>
+<body>
   <section>
     <div
     class="max-w-lg px-4 sm:pt-24 pt-12 sm:pb-8 mx-auto text-left md:max-w-none md:text-center"
@@ -52,7 +52,7 @@
     <br>
 
     <h1
-      class="font-extrabold leading-10 tracking-tight text-left text-[#201515] text-center sm:leading-none text-5xl sm:text-8xl"
+      class="font-extrabold mx-auto max-w-screen-2xl leading-10 tracking-tight text-center text-[#201515] text-left sm:leading-none text-5xl sm:text-8xl"
     >
       <span class="inline md:block">The Design of</span>
       <span
@@ -62,7 +62,17 @@
   </div>
   </section>
   <!-- component -->
+  <div class="bg-white pt-6 my-12 sm:pt-8 lg:pt-12">
+    <!-- banner - start -->
+    <div class="mx-auto max-w-screen-2xl px-4 pb-4 md:px-8">
+      <div class="relative flex flex-wrap rounded-lg bg-black px-4 py-3 shadow-lg sm:flex-nowrap sm:items-center sm:justify-center sm:gap-3 sm:pr-8 md:px-8">
+        <div class="order-1 mb-4 inline-block w-11/12 max-w-screen-sm text-sm text-white sm:order-none sm:my-2 sm:w-auto md:text-base">The page is under development.</div>
+      </div>
+    </div>
+    <!-- banner - end -->
+  </div>
 <section>
+
   <div class="bg-white py-6 sm:py-8 lg:py-12">
     <div class="mx-auto max-w-screen-2xl px-4 md:px-8">
       <div class="mb-6 flex items-end justify-between gap-4">
